# pointretta

./: .gitignore  LICENSE  Makefile  README.md
include/: cmd_build.h  cmd_train.h  ffn.h  model.h  optimizer.h  pr_format.h  retention.h  retention_multihead.h  tokenizer.h  train.h
python/: pyproject.toml  setup.py
python/bindings/: module.c
python/pointretta/: __init__.py
python/pointretta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/pointretta_src/include/: backward_ops.h  cmd_delete.h  dispatch.h  json_parser.h  norm.h  tensor.h  tensor_ops.h
python/pointretta_src/src/autograd/: backward_retention.c
python/pointretta_src/src/format/: pr_file.c
python/pointretta_src/src/kernels/: dispatch.c
python/pointretta_src/src/model/: ffn.c  norm.c  retention_recurrent.c
python/pointretta_src/src/tensor/: tensor_alloc.c
python/pointretta_src/src/tokenizer/: bpe_encode.c
tests/: README.md  test_adafactor  test_adafactor.c  test_backward_ops  test_backward_ops.c  test_dispatch  test_dispatch.c  test_flash_retention  test_flash_retention.c  test_json_parser  test_json_parser.c  test_model  test_model.c  test_multihead_backward_extended  test_multihead_backward_extended.c  test_norm_ffn  test_norm_ffn.c  test_pr_format  test_pr_format.c  test_retention_backward  test_retention_backward.c  test_retention_equivalence  test_retention_equivalence.c  test_retention_multihead  test_retention_multihead.c  test_tensor  test_tensor.c  test_tensor_ops  test_tensor_ops.c  test_tokenizer  test_tokenizer.c  test_training  test_training.c
tools/: validate_math  (+11 more)
(+45 files in other folders)
